feat : ClickHistory 및 추천 기능 추가